deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cliente1-frontend
  namespace: Inoova-Plataforma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cliente1-frontend
  template:
    metadata:
      labels:
        app: cliente1-frontend
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
